# qa_guru_python_20_hw_16

./: README.md
project_name/: pyproject.toml
