[project]
name = "project-name"
version = "0.1.0"
description = "Мой проект в poetry"
authors = [
    {name = "Maks747",email = "valol93@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=8.4.1,<9.0.0)",
    "selene (>=1.0.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "project_name", from = "src"}]


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
